Added MA 8 and edited MA 7, 9, and 10.

--- a/01_agama/madhyama/MA_007.md
+++ b/01_agama/madhyama/MA_007.md
@@ -4,82 +4,82 @@ title: 'The Medium Discourses | Chapter 1: Sevens | 7. Worldly Merit'
 type: kramdown
 base: ../../../
 previous: MA_006.html
-next: MA_009.html
+next: MA_008.html
 ---
 # [The Medium Discourses](index.html)
 ## Chapter 1: Sevens
 ### 7. Worldly Merit
 
-1\. Thus I have heard: One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila Park.[\[1\]](#n1){: #ref1}
+1\. Thus I have heard: One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila’s Park.[\[1\]](#n1){: #ref1}
 {:#p1}
 
-#### The Seven Worldly Merits
+#### Seven Worldly Merits
 
 2\. At the time, the Venerable Mahācunda rose from his seat of repose late in the afternoon and went to visit the Buddha. When he arrived, he paid homage and withdrew to sit at one side. He said, “Bhagavān, is it possible to define worldly merit?”
 {:#p2}
 
-3\. The Bhagavān told him, “It’s possible, Cunda. [428a] There are seven worldly merits that obtain great fortune, great reward, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who give living quarters and meeting halls to the assembly of monks. This, Cunda, is the first worldly merit that obtains great fortune, great reward, great renown, and great virtue.
+3\. The Bhagavān told him, “It’s possible, Cunda. [428a] There are seven worldly merits that obtain great fortune, rewards, renown, and virtue. What are the seven? Cunda, there are faithful clansmen and clanswomen who give living quarters and meeting halls to an assembly of monks. This, Cunda, is the first worldly merit that obtains great fortune, rewards, renown, and virtue.
 {:#p3}
 
-4\. “Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into their living quarters and give them seats, carpets, blankets, mattresses, and bedding supplies.[\[2\]](#n2){: #ref2} This, Cunda, is the second worldly merit that obtains great fortune, great reward, great renown, and great virtue.
+4\. “Furthermore, Cunda, there are faithful clansmen and clanswomen who go into the monks’ living quarters and give them seats, carpets, blankets, mattresses, and bedding.[\[2\]](#n2){:#ref2} This, Cunda, is the second worldly merit that obtains great fortune, rewards, renown, and virtue.
 {:#p4}
 
-5\. “Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into their living quarters and give everyone new, clean, and marvelous clothing. This, Cunda, is the third worldly merit that obtains great fortune, great reward, great renown, and great virtue.
+5\. “Furthermore, Cunda, there are faithful clansmen and clanswomen who go into their living quarters and give them all new, clean, and marvelous clothing. This, Cunda, is the third worldly merit that obtains great fortune, rewards, renown, and virtue.
 {:#p5}
 
-6\. “Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into their living quarters and give the community the morning rice gruel and midday meals. They also tell their servants to serve the monastery and give additional offerings to the monastery when there are rain and snowstorms. After they eat, the assembly of monks then isn’t troubled by the bad weather making their robes wet. Day and night, they meditate and contemplate in comfort, instead. This, Cunda, is the seventh worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
+6\. “Furthermore, Cunda, there are faithful clansmen and clanswomen who go into their living quarters and give the community the morning rice gruel and midday meals. They also tell their servants to serve the monastery and give additional offerings to the monastery during rain and snowstorms. After they eat, the assembly of monks then isn’t troubled by the bad weather making their robes wet. Instead, they meditate and contemplate day and night in comfort. This, Cunda, is the seventh worldly merit that obtains great fortune, rewards, renown, and virtue.
 {:#p6}
 
-7\. “Cunda, for faithful clansmen and clanswomen who have obtained these seven worldly merits, their merits will always arise and becoming greater and broader whether in the past or future, while standing or sitting, while asleep or awake, or during day or night.
+7\. “Cunda, these seven worldly merits will always produce fortune for those faithful clansmen and clanswomen that becomes greater and broader whether during the past or future, while standing or sitting, while asleep or awake, or during day or night.
 {:#p7}
 
-8\. “Cunda, it’s like the Gaṅgā River, which flows from its source to the ocean. It becomes deeper and wider as it goes. Thus, Cunda, are these seven worldly merits obtained by faithful clansmen and clanswomen. Their merits will always arise, becoming greater and broader whether in the past or future, while standing or sitting, while asleep or awake, or during day or night.”
+8\. “Cunda, it’s like the Gaṅgā River, which flows from its source to the ocean and becomes deeper and wider as it goes. Thus, Cunda, are these seven worldly merits obtained by faithful clansmen and clanswomen. They will always produce fortune that becomes greater and broader whether during the past or future, while standing or sitting, while asleep or awake, or during day or night.”
 {:#p8}
 
-#### The Seven Merits that Transcend the World
+#### Seven Merits that Transcend the World
 
-9\. Venerable Mahācunda then rose from his seat, bared his right shoulder, knelt on his right knee, and saluted with his palms together. He said, “Bhagavān, would it be possible to define the merits that transcend the world?”
+9\. Venerable Mahācunda then rose from his seat, bared his right shoulder, knelt on his right knee, and saluted with his palms together. He said, “Bhagavān, would it be possible to define merits that transcend the world?”
 {:#p9}
 
-10\. The Bhagavān told him, “It’s possible to define the merits that transcend the world. There are another seven merits that transcend the world and obtain great fortune, great reward, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of  his disciples have traveled to a certain place. [428b] They rejoice upon hearing about it, celebrating in their hearts. Cunda, this is the first merit that transcends the world and obtains great fortune, great reward, great renown, and great virtue.
+10\. The Bhagavān told him, “It’s possible, Cunda. There are another seven merits that transcend the world and obtain great fortune, rewards, renown, and virtue. What are the seven? Cunda, there are faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples have traveled to certain place. [428b] They rejoice when they hear that, celebrating in their hearts. Cunda, this is the first merit that transcends the world and obtains great fortune, rewards, renown, and virtue.
 {:#p10}
 
-11\. “Furthermore, Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples are about to come from that place to their own. They rejoice upon hearing about it, celebrating in their hearts. Cunda, this is the second merit that transcends the world and obtains great fortune, great reward, great renown, and great virtue.
+11\. “Furthermore, Cunda, there are faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples are about to come from that place to their own location. They rejoice when they hear that, celebrating in their hearts. Cunda, this is the second merit that transcends the world and obtains great fortune, rewards, renown, and virtue.
 {:#p11}
 
-12\. “Furthermore, Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples have arrived. They rejoice upon hearing it, celebrating in their hearts. They go personally to see them with a pure heart, and they pay their respects and make offerings. Once they had made offerings, they thrice take refuge in the Buddha, teaching, and community of monks and accept the precepts. Cunda, this is the seventh merit that transcends the world and obtains great fortune, great reward, great renown, and great virtue.
+12\. “Furthermore, Cunda, there are faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples has arrived. They rejoice when hear that, celebrating in their hearts. They go personally to see them with a pure heart to pay their respects and make offerings. Once they had made their offerings, they take refuge three times in the Buddha, Dharma, and Saṅgha of monks and accept the [lay] precepts. Cunda, this is the seventh merit that transcends the world and obtains great fortune, rewards, renown, and virtue.
 {:#p12}
 
-13\. “Cunda, if faithful clansmen and clanswomen were to attain these seven worldly merits and these other seven merits that transcend the world, their merits would be incalculable. Such merits, the results of such merits, and the rewards of such merits they possess simply cannot be delimited or measured, and the number of those great merits cannot be found.
+13\. “Cunda, if faithful clansmen and clanswomen were to attain these seven worldly merits and these other seven merits that transcend the world, their fortune would be incalculable. Their merits, the results of their merits, and the rewards of their merits simply cannot be delimited or measured, and the number of those great merits cannot be determined.
 {:#p13}
 
-14\. “Cunda, it’s like the five rivers that are in Jambudvīpa: 1. the Gaṅgā, 2. Yamunā, 3. Sarabhū, 4. Ajiravatī, and 5. Mahī. They flow down into the ocean, and their water is incalculable. The volume that it possesses simply cannot be delimited or measured, and the amount of water cannot be found.
+14\. “Cunda, it’s like the five rivers of Jambudvīpa: 1. the Gaṅgā, 2. Yamunā, 3. [Sarabhū], 4. Ajiravatī, and 5. Mahī. They flow down into the ocean, and their water is incalculable. Their volume simply cannot be delimited or measured, and the amount of water cannot be determined.
 {:#p14}
 
-15\. “Cunda, if such faithful clansmen or clanswomen attain these seven worldly merits and those other seven merits that transcend the world, their merits would be incalculable. Such merits, the results of such merits, and the rewards of such merits they possess simply cannot be delimited or measured, and the number of those great merits cannot be found.”
+15\. “Thus, Cunda, if faithful clansmen and clanswomen attain these seven worldly merits and these other seven merits that transcend the world, their fortune would be incalculable. Their merits, the results of their merits, and the rewards of their merits simply cannot be delimited or measured, and the number of those great merits cannot be determined.”
 {:#p15}
 
 16\. At that point, the Bhagavān spoke in verse:
 {:#p16}
 
 * {:.verse}“The Gaṅgā River\\
-Is clean and easy to cross;\\
+Is pure and easy to cross;\\
 The ocean with its many treasures\\
 Is the king of myriad rivers.
-* {:.verse}Like a river flows,\\
-A worldly person bows low;\\
-That’s where all streams return,\\
-Going forth into the ocean.
-* {:.verse}Such a person\\
+* {:.verse}Just like a river,\\
+A person pays respect to it;\\
+All the streams take refuge\\
+By flowing into the ocean.
+* {:.verse}Thus is a person who\\
 Gives clothes, food, and drink,\\
 Beds, sofas, and mats,\\
-[428c] And things upon which to sit.
+[428c] And things for sitting.
 * {:.verse}Measureless rewards of merit\\
 Lead to a marvelous place;\\
-They’re like the river’s flow,\\
-Going forth into the ocean.”
+They’re like those rivers\\
+Flowing into the ocean.”
 
-17\. The Buddha spoke thus. The Venerable Mahācunda and the monks who heard what the Buddha taught rejoiced and approved.
+17\. Thus did the Buddha speak. The Venerable Mahācunda and the monks who heard what the Buddha taught rejoiced and approved.
 {:#p17}
 
 ### Notes
@@ -91,7 +91,7 @@ Going forth into the ocean.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 8 March 2021
 {: .revised}
 
 ---
