--- a/01_agama/madhyama/MA_010.md
+++ b/01_agama/madhyama/MA_010.md
@@ -10,128 +10,135 @@ next: MA_011.html
 ## Chapter 1: Sevens
 ### 10. Ending the Contaminants
 
-1\. Thus I have heard: One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasadharma].
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kuru and was staying at the Kuru town of Kalmāṣadamya.[\[2\]](#n2){: #ref2}
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “It’s because of knowing and seeing that the contaminants can be ended, not by not knowing and not seeing. How can the contaminants be ended because of knowing and seeing?
 {:#p2}
 
-#### Right Consideration
+#### Correct Contemplation
 
-3\. “There is right consideration and consideration that’s not right. If someone doesn’t rightly consider, contaminants of desire yet to arise will arise, and those that have already arisen will readily increase. Contaminants of existence and ignorance yet to arise will arise, and those that have already arisen will readily increase.
+3\. “There is correct contemplation and incorrect contemplation. If someone doesn’t correctly contemplate, contaminants of desire that have yet to arise will arise, and those that have already arisen will increase. Contaminants of existence and ignorance that have yet to arise will arise, and those that have already arisen will increase.
 {:#p3}
 
-4\. “If someone rightly considers, contaminants of desire yet to arise won’t arise, and those that have already arisen will readily cease. Contaminants of existence and ignorance yet to arise won’t arise, and those that have already arisen will readily cease.
+4\. “If someone correctly contemplates, contaminants of desire that have yet to arise won’t arise, and those that have already arisen will cease. Contaminants of existence and ignorance that have yet to arise won’t arise, and those that have already arisen will cease.
 {:#p4}
 
-5\. “Still, ordinary fools don’t listen to the right teaching, don’t meet true friends, and don’t know the noble teaching. They aren’t disciplined by the noble teaching and don’t know the teaching as it truly is.
+5\. “Still, ordinary foolish people don’t listen to the right teaching, don’t meet genuine friends, and don’t know the noble teaching. They aren’t disciplined by the noble teaching and don’t truly know that teaching.
 {:#p5}
 
-6\. “When someone doesn’t rightly consider, contaminants of desire yet to arise will arise, and those that have already arisen will readily increase. Contaminants of existence and ignorance yet to arise will arise, and those that have already arisen will readily increase.
+6\. “When someone doesn’t correctly contemplate, contaminants of desire that have yet to arise will arise, and those that have already arisen will increase. Contaminants of existence and ignorance that have yet to arise will arise, and those that have already arisen will increase.
 {:#p6}
 
-7\. “When someone rightly considers, contaminants of desire yet to arise won’t arise, and those that have already arisen will readily cease. Contaminants of existence and ignorance yet to arise won’t arise, and those that have already arisen will readily cease.
+7\. “When someone correctly contemplates, contaminants of desire that have yet to arise won’t arise, and those that have already arisen will cease. Contaminants of existence and ignorance that have yet to arise won’t arise, and those that have already arisen will cease.
 {:#p7}
 
-8\. “Because someone doesn’t know the teaching as it truly is, they think things that shouldn’t be thought and don’t think things that should be thought. Because they think things that shouldn’t be thought and don’t think things that should be thought, contaminants of desire yet to arise will arise, and those that have already arisen will readily increase. Contaminants of existence [432a] and ignorance yet to arise will arise, and those that have already arisen will readily increase.
+8\. “Because they don’t truly know the teaching, a person thinks things that shouldn’t be thought and doesn’t think things that should be thought. Because they think things that shouldn’t be thought and don’t think things that should be thought, contaminants of desire that have yet to arise will arise, and those that have already arisen will increase. Contaminants of existence and ignorance that have yet to arise will arise, and those that have already arisen will increase.
 {:#p8}
 
-9\. “Well-versed noble disciples hear the right teaching and meet true friends. They are disciplined by the noble teaching and know the teaching as it truly is.
+9\. “Well-versed noble disciples hear the right teaching and meet genuine friends. They are disciplined by the noble teaching and truly know the teaching.
 {:#p9}
 
-10\. “When someone doesn’t rightly consider, contaminants of desire yet to arise will arise, and those that have already arisen will readily increase. Contaminants of existence and ignorance yet to arise will arise, and those that have already arisen will readily increase.
+10\. “When someone doesn’t correctly contemplate, contaminants of desire that have yet to arise will arise, and those that have already arisen will increase. Contaminants of existence and ignorance that have yet to arise will arise, and those that have already arisen will increase.
 {:#p10}
 
-11\. “When someone rightly considers, contaminants of desire yet to arise won’t arise, and those that have already arisen will readily cease. Contaminants of existence and ignorance yet to arise won’t arise, and those that have already arisen will readily cease.
+11\. “When someone correctly contemplates, contaminants of desire that have yet to arise won’t arise, and those that have already arisen will cease. Contaminants of existence and ignorance that have yet to arise won’t arise, and those that have already arisen will cease.
 {:#p11}
 
-12\. “After knowing the teaching as it truly is, they don’t think things that shouldn’t be thought and think things that should be thought. Because they don’t think things that shouldn’t be thought and think things that should be thought, contaminants of desire yet to arise won’t arise, and those that have already arisen will readily cease. Contaminants of existence and ignorance yet to arise won’t arise, and those that have already arisen will readily cease.
+12\. “After truly knowing the teaching, they don’t think things that shouldn’t be thought and think things that should be thought. Because they don’t think things that shouldn’t be thought and think things that should be thought, contaminants of desire that have yet to arise won’t arise, and those that have already arisen will cease. Contaminants of existence and ignorance that have yet to arise won’t arise, and those that have already arisen will cease.
 {:#p12}
 
 #### Seven Things That Stop the Contaminants
 
-13\. “There are seven things that stop the contaminants, afflictions, and grief. What are the seven? There are contaminants stopped by seeing, contaminants stopped by guarding, contaminants stopped by avoiding, contaminants stopped by using, contaminants stopped by tolerating, contaminants stopped by removing, and contaminants stopped by considering.
+13\. “There are seven things that stop the contaminants, the states of affliction and grief. What are the seven? There are contaminants stopped by seeing, contaminants stopped by guarding, contaminants stopped by avoiding, contaminants stopped by using, contaminants stopped by tolerating, contaminants stopped by removing, and contaminants stopped by contemplating.
 {:#p13}
 
 ##### 1. Seeing
 
-14\. “How are contaminants stopped by seeing? Ordinary fools can’t hear the right teaching, don’t meet true friends, and don’t know the noble teaching. They aren’t disciplined by the noble teaching and don’t know the teaching as it truly is. Because they don’t rightly consider, they then think, ‘I have past lives.’ ‘I have no past lives.’ ‘What were the causes of my past lives?’ ‘What were my past lives?’ ‘I’ll have future lives.’ ‘I’ll have no future lives.’ ‘What will be the causes of my future lives?’ ‘What will be my future lives?’
+14\. “How are contaminants stopped by seeing? Ordinary foolish people can’t hear the right teaching, don’t meet genuine friends, and don’t know the noble teaching. They aren’t disciplined by the noble teaching and don’t truly know the teaching. Because they don’t correctly contemplate, they then think, ‘I have past lives.’ ‘I have no past lives.’ ‘What were the causes of my past lives?’ ‘What were my past lives?’ ‘I’ll have future lives.’ ‘I’ll have no future lives.’ ‘What will be the causes of my future lives?’ ‘What will be my future lives?’
 {:#p14}
 
-15\. “They doubt themselves. ‘What does this mean?’ ‘What is this?’ ‘Where did this sentient being come from?’ ‘Where will it go?’ ‘What were the causes for its existence in the past?’ ‘What will be the causes for its existence in the future?’
+15\. “They doubt themselves, saying: ‘What’s the meaning of this?’ ‘What is this?’[\[3\]](#n3){: #ref3} ‘Where did this sentient being come from?’ ‘Where will it go?’ ‘What were the causes for its existence in the past?’ ‘What will be the causes for its existence in the future?’
 {:#p15}
 
-16\. “They make such considerations that aren’t right. From six views, the view arises accordingly: ‘There really is a soul.’ That view arises and gives rise to ‘There really is no soul.’ That view arises and gives rise to ‘The soul sees the soul.’ That views arises and gives rise to ‘The soul sees what’s not the soul.’ That view arises and gives rise to ‘What’s not the soul sees the soul.’ That view arises and gives rise to ‘The soul speaks, knows, acts, teaches, initiates actions, and initiates teachings. It’s born in one place or another and receives the results of good and bad [acts],’ or ‘It certainly comes from nowhere, certainly doesn’t exist, and certainly won’t exist.’
+16\. “Thus, they incorrectly contemplate. As a result of those six views, this view arises: ‘There really is a soul.’ That view gives rise to [this view]: ‘There really is no soul.’ That view gives rise to [this view]: ‘The soul sees the soul.’ That views gives rise to [this view]: ‘The soul sees what’s not the soul.’ That view gives rise to [this view]: ‘What’s not the soul sees the soul.’ That view gives rise to [these views]: ‘The soul speaks, knows, acts, teaches, initiates actions, and initiates teachings. It’s born in one place or another and receives the results of good and bad [actions],’ ‘It certainly comes from nowhere … certainly doesn’t exist … certainly won’t exist.’
 {:#p16}
 
-17\. “This is called the downfall of views, being moved by views, and being tied by the bond of views. Because of them, ordinary fools then experience the pains of birth, old age, illness, and death.
+17\. “This is called the downfall of views, being moved by views, and being tied by the bond of views. As a result, ordinary foolish people are subject to the pain of birth, old age, illness, and death.
 {:#p17}
 
-18\. “Well-versed noble disciples hear the right teaching and meet true friends. They are disciplined by the noble teaching and know the teaching as it truly is. They know suffering as it truly is. They know suffering’s accumulation, know suffering’s cessation, and know the path to suffering’s cessation as they truly are.
+18\. “Well-versed noble disciples hear the right teaching and meet genuine friends. They are disciplined by the noble teaching and truly know the teaching. They truly know suffering and truly know the formation of suffering, cessation of suffering, and the path to the cessation of suffering.
 {:#p18}
 
-19\. “After thus knowing them as they truly are, the three fetters then are ended, which are belief in the individual, adherence to precepts, and doubt. After ending the three fetters, they attain stream entry. They won’t fall into bad states and are certainly headed for right awakening. They’ll experience at most seven existences. After seven rebirths up in heaven or among humans, they’ll readily attain the limit of suffering.
+19\. “After thus truly knowing them, the three fetters are ended, which are belief in the individual, adherence to precepts, and doubt. After ending these three fetters, they attain stream entry. They won’t fall into bad states and are certainly headed for right awakening. They’ll experience at most seven existences. After seven rebirths up in heaven or among humans, they’ll then reach the end of suffering.
 {:#p19}
 
-20\. “If someone doesn’t know and see, then affliction and grief will arise. When they know and see, affliction and grief won’t arise. This is called stopping the contaminants by seeing.
+20\. “If someone doesn’t know and see, then affliction and grief will arise. When they know and see, affliction and grief won’t arise. This is called stopping contaminants by seeing.
 {:#p20}
 
 ##### 2. Guarding
 
-21\. “How are the contaminants stopped by guarding? A monk who guards the eye faculty as it sees forms observes what’s impure with right consideration. Someone who doesn’t guard the eye faculty doesn’t rightly consider it because they observe it as pure. If someone doesn’t guard their faculties, then affliction and grief will arise. When they are guarded, affliction and grief won’t arise.
+21\. “How are the contaminants stopped by guarding? Monks, someone who guards the eye faculty when they see things will observe what’s impure with correct contemplation. Someone who doesn’t guard the eye faculty will observe what’s pure with incorrect contemplation. If someone doesn’t guard their faculties, then affliction and grief will arise. When they guard their faculties, affliction and grief won’t arise.
 {:#p21}
 
-22\. “So it is when someone’s ear … nose … tongue … body … mind faculty perceives things. Someone who guards their mind faculty observes what’s impure with right consideration. Someone who doesn’t guard the mental faculty doesn’t rightly consider it because they observe it as pure. If someone doesn’t guard their faculties, then affliction and grief will arise. When they are guarded, affliction and grief won’t arise. This is called stopping the contaminants by guarding.
+22\. “So it is when someone’s ear … nose … tongue … body … mind faculty perceives things. Someone who guards their mind faculty will observe what’s impure with correct contemplation. Someone who doesn’t guard the mind faculty will observe what’s pure with incorrect contemplation. If someone doesn’t guard their faculties, then affliction and grief will arise. When they guard them, affliction and grief won’t arise. This is called stopping the contaminants by guarding.
 {:#p22}
 
 ##### 3. Avoiding
 
-23\. “How are the contaminants stopped by avoiding? A monk who sees a bad elephant then will avoid it. Bad horses, bad cattle, bad dogs, venomous snakes, bad paths, ditches, pits, hedges, rivers, deep springs, mountains, cliffs, bad associates, bad friends, bad heretics, bad villages, and bad homes should all be avoided by a monk if other religious practitioners who share the same dwelling would cause people without doubts to become doubtful [of him]. If they aren’t avoided, affliction and grief will arise. When they are avoided, affliction and grief won’t arise. This is called stopping the contaminants by avoiding.
+23\. “How are the contaminants stopped by avoiding? Monks, someone who sees a dangerous elephant will avoid it. Dangerous horses, cattle, dogs, vipers, paths, ditches, pits, hedges, rivers, deep springs, mountains, cliffs and bad associates, friends, heretics, villages, and homes should all be avoided by a monk. If other religious practitioners sharing the same dwelling would cause people without doubts to become doubtful [of him, a monk avoids them, too].[\[4\]](#n4){: #ref4} If someone doesn’t avoid these things, then affliction and grief will arise. When they avoid them, affliction and grief won’t arise. This is called stopping the contaminants by avoiding.
 {:#p23}
 
 ##### 4. Using
 
-24\. “How are the contaminants stopped by using? Suppose a monk uses robes not for profit, not because of pride, and not for ornamentation but only because of insects, wind, rain, cold, heat, and modesty.
+24\. “How are the contaminants stopped by using? Monks, suppose someone uses robes not for profit, not because of pride, and not for ornamentation but only because of insects, wind, rain, cold, heat, and modesty.
 {:#p24}
 
-25\. “Suppose he uses food not for profit, not because of pride, and not for the rich pleasure of it but only to make his body long-lasting, to remove afflictions and grief, to live the religious practice, because he wishes an illness to end and new illnesses not to arise, and to abide in comfort and without illness for a long time.
+25\. “Suppose someone uses food not for profit, not because of pride, and not for the rich pleasure of it but only to make his body long-lasting, to remove affliction and grief, to practice the religious life, to end an illness and prevent new illnesses, and to abide in comfort and without illness for a long time.
 {:#p25}
 
-26\. “Suppose he uses a house, a hut, a floor, or bedding not for profit, not because of pride, and not for ornamentation but only for rest from weariness and to sit quietly.
+26\. “Suppose someone uses a house, a hut, a floor, or a bed not for profit, not because of pride, and not for ornamentation but only for rest from weariness and to sit quietly.
 {:#p26}
 
-27\. “Suppose he uses hot water and medicine not for profit, not because of pride, and not for the rich pleasure of it but only to remove illness and discomfort, to manage his life root, and to be comfortable and without illness. If these things aren’t used, affliction and grief will arise. When they are used, affliction and grief won’t arise. This is called stopping the contaminants by using.
+27\. “Suppose someone uses hot water and medicine not for profit, not because of pride, and not for the rich pleasure of it but only to remove illness and discomfort, to manage their vitality, and to be comfortable and without illness. If someone doesn’t use these things, affliction and grief will arise. When they use them, affliction and grief won’t arise. This is called stopping the contaminants by using.
 {:#p27}
 
 ##### 5. Tolerating
 
-28\. “How are the contaminants stopped by tolerating? A monk makes effort to end what’s bad and unwholesome and cultivate good qualities, so he always has the idea of rising [early]. He concentrates his mind and endeavors. His body’s skin, muscles, sinews, bones, blood, and marrow become withered, but he doesn’t abandon his efforts. Only when he obtains what he seeks will he abandon his effort.
+28\. “How are the contaminants stopped by tolerating? Monks, someone makes effort to end bad and unskillful [qualities] and cultivate good qualities, so he always has the idea of rising [early]. They concentrate their mind and endeavor. Their skin, muscles, sinews, bones, blood, and marrow may wither, but they don’t abandon their effort. Only when they obtain what they seek will they abandon their effort.
 {:#p28}
 
-29\. “Again, a monk can tolerate hunger, thirst, cold, heat, biting and stinging insects, the oppression of wind and sun, and harsh sounds. He can also tolerate being caned. When he encounters illnesses or extreme pain and when his life is about to end, he’s capable of tolerating such unpleasantness. If someone doesn’t tolerate them, affliction and grief will arise. When they are tolerated, affliction and grief will not arise. This is called stopping the contaminants by tolerating.
+29\. “Again, monks, they can tolerate hunger, thirst, cold, heat, biting and stinging insects, the oppression of wind and sun, and harsh sounds. They can even tolerate being caned. When they encounter illness, extreme pain, or their life is about to end, they’re capable of tolerating such unpleasantness. If someone doesn’t tolerate these things, affliction and grief will arise. When they tolerate them, affliction and grief won’t arise. This is called stopping the contaminants by tolerating.
 {:#p29}
 
 ##### 6. Removing
 
-30\. “How are the contaminants stopped by removing? Suppose a monk gives rise to thoughts of desire that have not been removed or abandoned. He gives rise to thoughts of anger and thoughts of harmfulness that have not been removed or abandoned. If someone doesn’t remove them, affliction and grief will arise. When they are removed, affliction and grief won’t arise. This is called stopping the contaminants by removing.
+30\. “How are the contaminants stopped by removing? Monks, suppose someone gives rise to thoughts of desire that haven’t been removed and abandoned. They give rise to thoughts of anger and harmfulness that haven’t been removed and abandoned. If someone doesn’t remove these things, affliction and grief will arise. When they remove them, affliction and grief won’t arise. This is called stopping the contaminants by removing.
 {:#p30}
 
 ##### 7. Considering
 
-31\. “How are the contaminants stopped by considering? Suppose a monk considers the first awakening factor of mindfulness, supported by seclusion, lack of desire, and complete cessation which lead to escape. He considers qualities, effort, joy, calm, concentration, and the seventh awakening factor of equanimity, supported by seclusion, lack of desire, and complete cessation which lead to escape. If someone doesn’t consider them, affliction and grief will arise. When they are considered, affliction and grief won’t arise. This is called stopping the contaminants by considering.
+31\. “How are the contaminants stopped by contemplating? Monks, suppose someone contemplates the first awakening factor of mindfulness with the support of seclusion, lack of desire, and cessation which lead to escape. He contemplates teachings … effort … joy … calm … concentration … the seventh awakening factor of equanimity with the support of seclusion, lack of desire, and cessation which lead to escape. If someone doesn’t contemplate these things, affliction and grief will arise. When they contemplate them, affliction and grief won’t arise. This is called stopping the contaminants by contemplating.
 {:#p31}
 
-32\. “Suppose a monk sets out to stop the contaminants by seeing, and they are stopped because of seeing … to stop the contaminants by guarding, and they are stopped because of guarding … to stop the contaminants by avoiding, and they are stopped because of avoiding … to stop the contaminants by using, and they are stopped because of using … to stop the contaminants by tolerating, and they are stopped because of tolerating … to stop the contaminants by removing, and they are stopped because of removing … to stop the contaminants by considering, and they are stopped because of considering. He’s called a monk who was once bound by all the contaminants and who’s now free. He can reach the limit of suffering with right knowledge.”
+32\. “Monks, suppose someone sets out to stop the contaminants by seeing, and they are stopped because of seeing … to stop the contaminants by guarding, and they are stopped because of guarding … to stop the contaminants by avoiding, and they are stopped because of avoiding … to stop the contaminants by using, and they are stopped because of using … to stop the contaminants by tolerating, and they are stopped because of tolerating … to stop the contaminants by removing, and they are stopped because of removing … to stop the contaminants by contemplating, and they are stopped because of contemplating. This is called a monk who was once bound by all the contaminants and who’s now free. He can reach the end of suffering with right knowledge.”
 {:#p32}
 
-33\. The Buddha spoke thus. The monks who heard what the Buddha taught rejoiced and approved.
+33\. Thus did the Buddha speak. The monks who heard what the Buddha taught rejoiced and approved.
 {:#p33}
+
+### Notes
+
+1. {:#n1} Direct parallels include [MN 2](https://suttacentral.net/mn2){: target="_blank"} and EĀ 40.6. [\[back\]](#ref1)
+2. {:#n2} *Kalmāṣadamya*. Ch. 劒磨瑟曇, MCh. “kiam-mua-shet-dam.” This is the Skt. attestation, which is equivalent to P. Kammāsadamma. [\[back\]](#ref2)
+3. {:#n3} *this*. The Chinese doesn’t use a pronoun in these first two question, but the meaning appears to be the same as the Pali parallel that reads “ahaṃ nu khosmi … Kiṃ nu khosmi?” [\[back\]](#ref3)
+4. {:#n4} The passage “bad friends … avoids them” is repeated in the Chinese, which appears to be a copyist error. I’ve omitted it from translation. [\[back\]](#ref4)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 2 July 2020
+Last Revised: 8 March 2021
 {: .revised}
 
 ---
