--- a/01_agama/madhyama/MA_008.md
+++ b/01_agama/madhyama/MA_008.md
@@ -69,7 +69,7 @@ next: MA_009.html
 19\. “Monks, now I have arisen in the world as a Tathāgata, Arhat, and Completely Awakened One, Accomplished in Knowledge and Conduct, Well Gone, Understander of the World, Trainer in the Way and Teaching, Teacher of Gods and People, and I’m called a Buddha and a Bhagavān. Now, I benefit myself, benefit others, benefit many people, pity the world, seek both meaning and benefit for gods and humans, and seek peace and happiness. Now, I explain a teaching that reaches the ultimate, that’s ultimately clean, that’s ultimately the religious practice, and that’s ultimately the completion of the religious life. Now, I’ve parted with birth, old age, illness, death, lamentation, and sorrow, and I’ve been freed from all suffering.”
 {:#p19}
 
-20\. Thus did Buddha speak. Those monks who heard what the Buddha had taught rejoiced and approved.
+20\. Thus did the Buddha speak. Those monks who heard what the Buddha had taught rejoiced and approved.
 {:#p20}
 
 ### Notes
